# my-app

./: .flake8  .gitignore  LICENSE  pyproject.toml  requirements.txt  setup_compilation.py  venv.ps1
src/backend/: main.py
src/backend/constants/: __init__.py  dictionary_morse.py  dictionary_print.py
src/backend/core/: config.py
src/backend/database/template/SELECT/: teste.sql
src/backend/helpers/: __init__.py  beep_morse.py  bin_text_verifi.py  key_crypto.py  scientific_notation.py  webcam_rgb_to_bgr.py
src/backend/modules/codec/: __init__.py  bin_code_decode.py  encryption_code_decode.py  morse_code_decode.py
src/backend/modules/math/: __init__.py  fibonacci.py  pascoa.py  pascoa.pyi  pascoa.pyx  webcam_finger.py  webcam_fingers.py
src/backend/trash/: CONFIG_TESTE.PY
src/backend/utils/: __init__.py  heitor_print.py  performance.py  remove_accent.py
tests/: test_codec.py
